2017-08-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import potrace-1.15.
	* version.ac: Adjust.

2017-02-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import potrace-1.14.
	* version.ac: Adjust.

2016-02-15  Karl Berry  <karl@tug.org>

	* potrace-PATCHES: rename from potrace-src-PATCHES.
	* Makefile.am (EXTRA_DIST): likewise.

2015-12-28  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import potrace-1.13.
	* configure.ac: New source-tree-naming convention per Karl.
	* version.ac: Adjust.

2015-07-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2015-03-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import potrace-1.12.
	* version.ac: Adjust.

2015-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use the fragment ../../am/dist_hook.am.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2013-07-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use ../../am/rebuild.am.

2013-07-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* include/Makefile.am: Moved Makefile fragments to ../../am/.

2013-04-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import potrace-1.11.
